php-src/Zend/tests/ns_092.exp
==== MIXED ====
Foo\Bar\A::__construct
Foo\Bar\B::__construct
int(2)
===== CONSTANTS ====
int(100)
int(1)
int(2)
bool(false)
===== FUNCTIONS ====
Fiz\Biz\Buz\buz
Foo\Bar\fiz
Foo\Bar\biz
Foo\Bar\buz

Fatal error: Uncaught Error: Call to undefined function Foo\Bar\A() in %sns_092.php:45
Stack trace:
#0 {main}
  thrown in %sns_092.php on line 45